feat: aws secret manager certificate AM-3308
(cherry picked from commit d3f32c9e4b16cfc01f069f71b142f39e34427343)